fix whitespace

--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ body {
         gap: var(--space-400);
         /* border: 3px dashed aliceblue; */
         position: relative;
-        top: 2rem;
+        top: 1.5rem;
     }
 
     .hero::after {
@@ -449,7 +449,7 @@ body {
         background: url(/assets/desktop/image-hero-right.png) top left/contain no-repeat;
         /* border: 3px dashed blue; */
         position: relative;
-        top: 4rem;
+        top: 3.5rem;
     }
 
     /* .hero {
